# ECE-shoot-them-up

./: CMakeLists.txt  README.md  enemy.c  enemy.h  game.c  game.h  input.c  input.h  main.c  player.c  player.h
